6723160: Nightly failure: Error: meet not symmetric

Add missing _instance_id settings and other EA fixes.

Reviewed-by: rasbold